--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -17,7 +17,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                <h3>Women's'</h3>
+                <h3>Atlantic Conference Teams</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>League Id</th>
