Adding new LINQ queries

--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -20,9 +20,9 @@
                 <h3>Atlantic Conference Teams</h3>
                 <table class="table table-striped">
                     <tr>
+                        <th>Team Id</th>
+                        <th>Team Name</th>
                         <th>League Id</th>
-                        <th>League Name</th>
-                        <th>League Sport</th>
                     </tr>
                     @foreach (var x in ViewBag.Atlantic)
                     {
