--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -40,7 +40,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                <h3>Atlantic Conference Teams</h3>
+                <h3>Boston Penguins Players</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>Team Id</th>
