--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -132,7 +132,7 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                <h3>All Football Players</h3>
+                <h3>All Teams with current players named Sophia</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>Team Id</th>
