--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -151,4 +151,27 @@
             </div>
         </div>
     </div>
+
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h3>All Leagues with current players named Sophia</h3>
+                <table class="table table-striped">
+                    <tr>
+                        <th>League Id</th>
+                        <th>League Name</th>
+                        <th>Sport</th>
+                    </tr>
+                    @foreach (var x in ViewBag.TeamSophia)
+                    {
+                        <tr>
+                            <td>@x.LeagueId</td>
+                            <td>@x.Name</td>
+                            <td>@x.Sport</td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
