Updating View - Should fix it

--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -162,7 +162,7 @@
                         <th>League Name</th>
                         <th>Sport</th>
                     </tr>
-                    @foreach (var x in ViewBag.TeamSophia)
+                    @foreach (var x in ViewBag.LeagueSophia)
                     {
                         <tr>
                             <td>@x.LeagueId</td>
