--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -174,4 +174,27 @@
             </div>
         </div>
     </div>
+
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h3>All Leagues with current players named Sophia</h3>
+                <table class="table table-striped">
+                    <tr>
+                        <th>Player Id</th>
+                        <th>Player First Name</th>
+                        <th>Player Last Name</th>
+                    </tr>
+                    @foreach (var x in ViewBag.AllFootball)
+                    {
+                        <tr>
+                            <td>@x.PlayerId</td>
+                            <td>@x.FirstName</td>
+                            <td>@x.LastName</td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
