--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -178,14 +178,14 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
-                <h3>All Leagues with current players named Sophia</h3>
+                <h3>Last Name Lopez but doesn't play for the Washington Roughriders</h3>
                 <table class="table table-striped">
                     <tr>
                         <th>Player Id</th>
                         <th>Player First Name</th>
                         <th>Player Last Name</th>
                     </tr>
-                    @foreach (var x in ViewBag.AllFootball)
+                    @foreach (var x in ViewBag.LopezNotRough)
                     {
                         <tr>
                             <td>@x.PlayerId</td>
