--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -191,6 +191,7 @@
                             <td>@x.PlayerId</td>
                             <td>@x.FirstName</td>
                             <td>@x.LastName</td>
+                            <td>@x.CurrentTeam</td>
                         </tr>
                     }
                 </table>
