--- a/Views/Home/Level2.cshtml
+++ b/Views/Home/Level2.cshtml
@@ -184,6 +184,7 @@
                         <th>Player Id</th>
                         <th>Player First Name</th>
                         <th>Player Last Name</th>
+                        <th>Current Team</th>
                     </tr>
                     @foreach (var x in ViewBag.LopezNotRough)
                     {
