--- a/Views/Home/Level3.cshtml
+++ b/Views/Home/Level3.cshtml
@@ -27,9 +27,9 @@
                     @foreach (var x in ViewBag.SamEvans)
                     {
                         <tr>
-                            <td>@x.PlayerId</td>
-                            <td>@x.FirstName</td>
-                            <td>@x.LastName</td>
+                            <td>@x.TeamId</td>
+                            <td>@x.TeamName</td>
+                            <td>@x.Location</td>
                         </tr>
                     }
                 </table>
